--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  #intl: ^0.19.0
+  intl: ^0.19.0
   hive_flutter: ^1.1.0
   hive: ^2.2.3
-  horizontal_week_calendar: ^0.0.15
+  #horizontal_week_calendar: ^0.0.15
+  countdown_progress_indicator: ^0.1.3
+
 
 
 dev_dependencies:
