--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive: ^2.2.3
   #horizontal_week_calendar: ^0.0.15
   countdown_progress_indicator: ^0.1.3
+  share_plus: ^8.0.2
 
 
 
