--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   #horizontal_week_calendar: ^0.0.15
   countdown_progress_indicator: ^0.1.3
   share_plus: ^8.0.2
+  simple_horizontal_calendar: ^0.0.2
 
 
 
